# SuperAnimalHack

./: .gitignore  CMakeLists.txt  README.md
Source/: DllMain.cpp  main.cpp  main.hpp
Source/Core/: App.cpp  App.hpp
Source/Core/Config/: Config.hpp
Source/Core/GameStructs/: GameStructs.hpp
Source/Core/Hooks/: HooksDefinitions.hpp  HooksImplementations.hpp  HooksManager.cpp  HooksManager.hpp
Source/Core/Logging/: LogManager.cpp  LogManager.hpp
Source/Core/Math/: Utils.hpp  Vectors.hpp
Source/Core/Memory/: NopBuffer.cpp  NopBuffer.hpp
Source/Core/Modules/: ModuleBase.hpp  ModulesManager.cpp  ModulesManager.hpp
Source/Features/Bunnyhop/: Bunnyhop.cpp  Bunnyhop.hpp
Source/Features/Camera/: CameraModule.cpp  CameraModule.hpp
Source/Features/ESP/: EspModule.cpp  EspModule.hpp
Source/Features/NoRecoil/: NoRecoil.cpp  NoRecoil.hpp
Source/Features/SpeedHack/: Speedhack.cpp  Speedhack.hpp
